--- a/h2.md
+++ b/h2.md
@@ -1,9 +1,14 @@
 ## h2 - Komentaja Pingviini
 # Aikatiedot
 - Työskentely ja tehtävänannon lukeminen alkaa klo 13.50
+- Käynnistän Oracle VirtualBox 6.1.34 -version klo 14.00
+- Ruudulle tulee kehote uuden version lataamisesta, aloitan uudemman 6.1.40 -version latausprosessin
+- 
 # Tiivistelmä komentokehotteen perusteista
 - Linuxin komentokehotteessa:
   - `pwd tulostaa nykyisen hakemiston sisältötiedon`
   - ``
 # Lähteet
-- Karvinen T. Komentaja Pingviini Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
+- Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
+# Tekijä / Author
+Aapo Pessa
