--- a/h2.md
+++ b/h2.md
@@ -1,13 +1,23 @@
 ## h2 - Komentaja Pingviini
-# Aikatiedot
+# Aikatiedot ja tapahtumienkulku
 - Työskentely ja tehtävänannon lukeminen alkaa klo 13.50
 - Käynnistän Oracle VirtualBox 6.1.34 -version klo 14.00
 - Ruudulle tulee kehote uuden version lataamisesta, aloitan uudemman 6.1.40 -version latausprosessin
+- Uudemman version lataus onnistuu ja käynnistän ohjelman uudelleen
+- Linux -ympäristö käynnistyy
+- Kirjaudun sisään
 - 
-# Tiivistelmä komentokehotteen perusteista
+# Tiivistelmä komentokehotteen perusteista (keskeisimmät toiminnot)
 - Linuxin komentokehotteessa:
-  - `pwd tulostaa nykyisen hakemiston sisältötiedon`
-  - ``
+  - `pwd tulostaa nykyisen hakemiston nimen`
+  - `ls tulostaa nykyisen hakemiston sisällön`
+  - `cd -komennon avulla voit siirtyä hakemistosta toiseen esim. cd home/`
+  - `cd .. -komennon avulla siirryt tason ylemmäs nykyisestä hakemistosijainnista`
+  - `mkdir (kansion nimi) luo uuden hakemiston`
+  - `mv siirtää tai uudelleennimeää tiedoston`
+  - `cp kopioi tiedoston`
+  - `rm poistaa tiedoston`
+  - `rmdir poistaa hakemiston`
 # Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
 # Tekijä / Author
