--- a/h2.md
+++ b/h2.md
@@ -6,8 +6,12 @@
 - Uudemman version lataus onnistuu ja käynnistän ohjelman uudelleen
 - Linux -ympäristö käynnistyy
 - Kirjaudun sisään
-- 
-# Tiivistelmä komentokehotteen perusteista (keskeisimmät toiminnot)
+- Kokeilen komentoja komentokehotteessa:
+- (kuva)
+- (kuva)
+- (kuva)
+- Siirryn tehtävään 2: Micro-editorin lataaminen
+# 1. Tiivistelmä komentokehotteen perusteista (keskeisimmät toiminnot)
 - Linuxin komentokehotteessa:
   - `pwd tulostaa nykyisen hakemiston nimen`
   - `ls tulostaa nykyisen hakemiston sisällön`
@@ -18,6 +22,17 @@
   - `cp kopioi tiedoston`
   - `rm poistaa tiedoston`
   - `rmdir poistaa hakemiston`
+# 2. Micro-editorin latausprosessi
+-
+-
+-
+-
+-
+-
+-
+-
+-
+
 # Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
 # Tekijä / Author
