--- a/h2.md
+++ b/h2.md
@@ -1,5 +1,16 @@
-## h2 - Komentaja Pingviini
-# Aikatiedot ja tapahtumienkulku
+# h2 - Komentaja Pingviini
+## 1. Tiivistelmä komentokehotteen perusteista (keskeisimmät toiminnot)
+### Linuxin komentokehotteessa:
+  - `pwd tulostaa nykyisen hakemiston nimen`
+  - `ls tulostaa nykyisen hakemiston sisällön`
+  - `cd -komennon avulla voit siirtyä hakemistosta toiseen esim. cd home/`
+  - `cd .. -komennon avulla siirryt tason ylemmäs nykyisestä hakemistosijainnista`
+  - `mkdir (kansion nimi) luo uuden hakemiston`
+  - `mv siirtää tai uudelleennimeää tiedoston`
+  - `cp kopioi tiedoston`
+  - `rm poistaa tiedoston`
+  - `rmdir poistaa hakemiston`
+### Aikatiedot ja tapahtumienkulku
 - Työskentely ja tehtävänannon lukeminen alkaa klo 13.50
 - Käynnistän Oracle VirtualBox 6.1.34 -version klo 14.00
 - Ruudulle tulee kehote uuden version lataamisesta, aloitan uudemman 6.1.40 -version latausprosessin
@@ -11,17 +22,6 @@
 - (kuva)
 - (kuva)
 - Siirryn tehtävään 2: Micro-editorin lataaminen
-# 1. Tiivistelmä komentokehotteen perusteista (keskeisimmät toiminnot)
-- Linuxin komentokehotteessa:
-  - `pwd tulostaa nykyisen hakemiston nimen`
-  - `ls tulostaa nykyisen hakemiston sisällön`
-  - `cd -komennon avulla voit siirtyä hakemistosta toiseen esim. cd home/`
-  - `cd .. -komennon avulla siirryt tason ylemmäs nykyisestä hakemistosijainnista`
-  - `mkdir (kansion nimi) luo uuden hakemiston`
-  - `mv siirtää tai uudelleennimeää tiedoston`
-  - `cp kopioi tiedoston`
-  - `rm poistaa tiedoston`
-  - `rmdir poistaa hakemiston`
 # 2. Micro-editorin latausprosessi
 -
 -
