--- a/h2.md
+++ b/h2.md
@@ -22,18 +22,21 @@
 - (kuva)
 - (kuva)
 - Siirryn tehtävään 2: Micro-editorin lataaminen
-# 2. Micro-editorin latausprosessi
--
--
--
--
--
--
--
--
--
+## 2. Micro-editorin latausprosessi
+- Navigoin selaimessa sivustoon https://github.com/zyedidia/micro#installation, joka selostaa Micro-editorin latausohjeet
+- Käynnistän uudelleen komentokehotteen Linux-ympäristössä
+- Ohjeissa "Quick-install script" -osion alla kehotetaan käyttäjää lataamaan koodieditori komennolla: `curl https://getmic.ro | bash` (curl -komennon avulla voidaan siirtää dataa serverille hyödyntäen tuettua protocollaa, tässä tapauksessa https) (geeksforgeeks)
+- Suoritan `curl https://getmic.ro | bash` -komennon
+- (kuva)
+- Oletan, että lataus onnistui, mutta testaan vielä varmuuden vuoksi komennolla `./micro`
+- (kuva)
+- Toimii!
+- Siirryn tehtävään 3: Raudan listaus klo 14.40
+## 3. Raudan listaus
 
 # Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
+- https://github.com/zyedidia/micro#installation
+- geeksforgeeks. curl command in Linux with Examples. https://www.geeksforgeeks.org/curl-command-in-linux-with-examples/
 # Tekijä / Author
 Aapo Pessa
