--- a/h2.md
+++ b/h2.md
@@ -10,6 +10,8 @@
   - `cp kopioi tiedoston`
   - `rm poistaa tiedoston`
   - `rmdir poistaa hakemiston`
+
+
 ### Aikatiedot ja tapahtumienkulku
 - Työskentely ja tehtävänannon lukeminen alkaa klo 13.50
 - Käynnistän Oracle VirtualBox 6.1.34 -version klo 14.00
@@ -22,6 +24,8 @@
 - (kuva)
 - (kuva)
 - Siirryn tehtävään 2: Micro-editorin lataaminen
+
+
 ## 2. Micro-editorin latausprosessi
 - Navigoin selaimessa sivustoon https://github.com/zyedidia/micro#installation, joka selostaa Micro-editorin latausohjeet
 - Käynnistän uudelleen komentokehotteen Linux-ympäristössä
@@ -32,11 +36,31 @@
 - (kuva)
 - Toimii!
 - Siirryn tehtävään 3: Raudan listaus klo 14.40
-## 3. Raudan listaus
 
-# Lähteet
+
+## 3. Raudan listaus
+- Käynnistän komentokehotteen uudelleen
+- Suoritan komennon: `sudo lshw -short -sanitize`
+- Kehote pyytää salasanaa
+- Annan salasanan
+- (kuva)
+- Navigoin sivulle: https://howtoinstall.co/en/lshw etsien ohjeita lshw:n lataukseen
+- Suoritan komennon: `sudo apt-get install lshw` ja annan salasanan
+- (kuva)
+- Kokeilen komentoa: `sudo lshw -short -sanitize` uudelleen
+- (kuva)
+- Komento listaa käyttöjärjestelmän tiedot, ja niiden kategoriat (poislukien arkaluontoiden informaatio `-sanitize` -valinnan takia
+- "Class" kategorisoi tiedon sen luonteen mukaisesti
+- "Device" kertoo missä tietokoneen osassa tieto sijaitsee/pyörii
+- "Description" kuvailee annettua metadataa
+
+## 4. Apt - kolmen ohjelman samanaikainen lataus ja niiden testaus
+- 
+
+## Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
-- https://github.com/zyedidia/micro#installation
+- GitHub https://github.com/zyedidia/micro#installation
 - geeksforgeeks. curl command in Linux with Examples. https://www.geeksforgeeks.org/curl-command-in-linux-with-examples/
-# Tekijä / Author
-Aapo Pessa
+- GitHub https://github.com/lyonel/lshw
+## Tekijä / Author
+- Aapo Pessa
