--- a/h2.md
+++ b/h2.md
@@ -55,12 +55,18 @@
 - "Description" kuvailee annettua metadataa
 
 ## 4. Apt - kolmen ohjelman samanaikainen lataus ja niiden testaus
+- Etsin hakukonetta hyödyntäen kolme ladattavaa ohjelmistoa
+- Valitsen nämä: cool-retro-term, Wikit ja Googler
 - 
 
 ## Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
 - GitHub https://github.com/zyedidia/micro#installation
 - geeksforgeeks. curl command in Linux with Examples. https://www.geeksforgeeks.org/curl-command-in-linux-with-examples/
-- GitHub https://github.com/lyonel/lshw
+- https://howtoinstall.co/en/lshw
+- https://www.tecmint.com/cool-linux-commandline-tools-for-terminal/
+- https://github.com/Swordfish90/cool-retro-term
+- https://www.tecmint.com/wikipedia-commandline-tool/
+- https://www.tecmint.com/google-commandline-search-terminal/
 ## Tekijä / Author
 - Aapo Pessa
