--- a/h2.md
+++ b/h2.md
@@ -57,7 +57,28 @@
 ## 4. Apt - kolmen ohjelman samanaikainen lataus ja niiden testaus
 - Etsin hakukonetta hyödyntäen kolme ladattavaa ohjelmistoa
 - Valitsen nämä: cool-retro-term, Wikit ja Googler
-- 
+- Voitaakseni ladata Wikit-ohjelmiston, minun tarvitsee ensin ladata `nodejs` ja `npm` komennolla `sudo apt install nodejs npm`
+- (kuva)
+- Yritän ladata kaikki kolme ohjelmaa komennolla: `sudo npm install wikit sudo apt-get install googler cool-retro-term`
+- (kuva)
+- En onnistunut lataamaan cool-retro-term ohjelmaa, koska se ei sisälly npm-rekisteriin
+### Wikit
+- Yritän ladata pelkästään Wikit-ohjelmiston komennolla: `sudo npm install wikit`
+- (kuva)
+- Tämänkaltainen installaatio altistaa laitteiston hakemalla ja antamalla oikeuksia epäluotettaville tahoille, joten installaation keskeytyy
+- Kokeilen vaihtoehtoista latauskomentoa: `npm i wikit -g`
+- (kuva)
+- Kohtaan ongelmia käyttäjäoikeuksien kanssa
+
+### Googler
+- Etsin googler:in GitHub sivuston installaatio-ohjeita varten: 
+- Suoritan komennon: `$ sudo curl -o /usr/local/bin/googler https://raw.githubusercontent.com/jarun/googler/v4.3.2/googler && sudo chmod +x /usr/local/bin/googler`
+- (kuva)
+- Käynnistän ohjelman komennolla: `googler`
+- Testaan komenta syöttämällä oman nimeni: `Aapo`
+- (kuva)
+- Siirryn sivustolle: https://github.com/jarun/googler/wiki/What-to-do-when-you-encounter-%22No-results%22 etsimään ohjeita
+- En onnistu ratkaisemaan ongelmaa joten etsin toisen, sopivamman ohjelmiston klo 16.20 (pidän tauon)
 
 ## Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
@@ -68,5 +89,6 @@
 - https://github.com/Swordfish90/cool-retro-term
 - https://www.tecmint.com/wikipedia-commandline-tool/
 - https://www.tecmint.com/google-commandline-search-terminal/
+- https://github.com/KorySchneider/wikit
 ## Tekijä / Author
 - Aapo Pessa
