--- a/h2.md
+++ b/h2.md
@@ -16,13 +16,13 @@
 - Työskentely ja tehtävänannon lukeminen alkaa klo 13.50
 - Käynnistän Oracle VirtualBox 6.1.34 -version klo 14.00
 - Ruudulle tulee kehote uuden version lataamisesta, aloitan uudemman 6.1.40 -version latausprosessin
+- ![Add file: Upload](latausikkuna.png)
 - Uudemman version lataus onnistuu ja käynnistän ohjelman uudelleen
 - Linux -ympäristö käynnistyy
 - Kirjaudun sisään
 - Kokeilen komentoja komentokehotteessa:
-- (kuva)
-- (kuva)
-- (kuva)
+- ![Add file: Upload](komentoja.png)
+- ![Add file: Upload](komentoja2.png)
 - Siirryn tehtävään 2: Micro-editorin lataaminen
 
 
@@ -31,9 +31,9 @@
 - Käynnistän uudelleen komentokehotteen Linux-ympäristössä
 - Ohjeissa "Quick-install script" -osion alla kehotetaan käyttäjää lataamaan koodieditori komennolla: `curl https://getmic.ro | bash` (curl -komennon avulla voidaan siirtää dataa serverille hyödyntäen tuettua protocollaa, tässä tapauksessa https) (geeksforgeeks)
 - Suoritan `curl https://getmic.ro | bash` -komennon
-- (kuva)
+- ![Add file: Upload](micro_install.png)
 - Oletan, että lataus onnistui, mutta testaan vielä varmuuden vuoksi komennolla `./micro`
-- (kuva)
+- ![Add file: Upload](micro.png)
 - Toimii!
 - Siirryn tehtävään 3: Raudan listaus klo 14.40
 
@@ -43,10 +43,10 @@
 - Suoritan komennon: `sudo lshw -short -sanitize`
 - Kehote pyytää salasanaa
 - Annan salasanan
-- (kuva)
+- ![Add file: Upload](lshw_puuttuu.png)
 - Navigoin sivulle: https://howtoinstall.co/en/lshw etsien ohjeita lshw:n lataukseen
 - Suoritan komennon: `sudo apt-get install lshw` ja annan salasanan
-- (kuva)
+- ![lshw_ladattu](https://user-images.githubusercontent.com/70698264/213930438-151ec7f7-cf17-4372-a950-6c9e3cc33e5c.png)
 - Kokeilen komentoa: `sudo lshw -short -sanitize` uudelleen
 - (kuva)
 - Komento listaa käyttöjärjestelmän tiedot, ja niiden kategoriat (poislukien arkaluontoiden informaatio `-sanitize` -valinnan takia
