--- a/h2.md
+++ b/h2.md
@@ -48,7 +48,7 @@
 - Suoritan komennon: `sudo apt-get install lshw` ja annan salasanan
 - ![lshw_ladattu](https://user-images.githubusercontent.com/70698264/213930438-151ec7f7-cf17-4372-a950-6c9e3cc33e5c.png)
 - Kokeilen komentoa: `sudo lshw -short -sanitize` uudelleen
-- (kuva)
+- ![lshw_sanitize](https://user-images.githubusercontent.com/70698264/213930474-87043d16-37d2-4f1f-8ba8-d77d66841f8e.png)
 - Komento listaa käyttöjärjestelmän tiedot, ja niiden kategoriat (poislukien arkaluontoiden informaatio `-sanitize` -valinnan takia
 - "Class" kategorisoi tiedon sen luonteen mukaisesti
 - "Device" kertoo missä tietokoneen osassa tieto sijaitsee/pyörii
@@ -58,25 +58,24 @@
 - Etsin hakukonetta hyödyntäen kolme ladattavaa ohjelmistoa
 - Valitsen nämä: cool-retro-term, Wikit ja Googler
 - Voitaakseni ladata Wikit-ohjelmiston, minun tarvitsee ensin ladata `nodejs` ja `npm` komennolla `sudo apt install nodejs npm`
-- (kuva)
+- ![nodejs_install](https://user-images.githubusercontent.com/70698264/213930515-56e08630-3f64-4d9d-b0fc-30905d280aef.png)
 - Yritän ladata kaikki kolme ohjelmaa komennolla: `sudo npm install wikit sudo apt-get install googler cool-retro-term`
-- (kuva)
+- ![npm_error](https://user-images.githubusercontent.com/70698264/213930543-475ef1dc-5964-4a5d-9a42-76656fc5d09b.png)
 - En onnistunut lataamaan cool-retro-term ohjelmaa, koska se ei sisälly npm-rekisteriin
 ### Wikit
 - Yritän ladata pelkästään Wikit-ohjelmiston komennolla: `sudo npm install wikit`
-- (kuva)
+- ![wikit_vuln](https://user-images.githubusercontent.com/70698264/213930561-735a5cd8-9b92-499a-806f-afb006040833.png)
 - Tämänkaltainen installaatio altistaa laitteiston hakemalla ja antamalla oikeuksia epäluotettaville tahoille, joten installaation keskeytyy
 - Kokeilen vaihtoehtoista latauskomentoa: `npm i wikit -g`
-- (kuva)
 - Kohtaan ongelmia käyttäjäoikeuksien kanssa
 
 ### Googler
 - Etsin googler:in GitHub sivuston installaatio-ohjeita varten: 
 - Suoritan komennon: `$ sudo curl -o /usr/local/bin/googler https://raw.githubusercontent.com/jarun/googler/v4.3.2/googler && sudo chmod +x /usr/local/bin/googler`
-- (kuva)
+- ![googler_install](https://user-images.githubusercontent.com/70698264/213930590-e59b8dbf-25c6-4277-ad2d-e23cb011df0f.png)
 - Käynnistän ohjelman komennolla: `googler`
-- Testaan komenta syöttämällä oman nimeni: `Aapo`
-- (kuva)
+- Testaan komenta syöttämällä sanan "world": 
+- ![googler_no_results](https://user-images.githubusercontent.com/70698264/213930624-14670cdd-ed43-40e4-b4cf-5a531fbe7572.png)
 - Siirryn sivustolle: https://github.com/jarun/googler/wiki/What-to-do-when-you-encounter-%22No-results%22 etsimään ohjeita
 - En onnistu ratkaisemaan ongelmaa joten etsin toisen, sopivamman ohjelmiston klo 16.20 (pidän tauon)
 
