--- a/h2.md
+++ b/h2.md
@@ -79,6 +79,13 @@
 - Siirryn sivustolle: https://github.com/jarun/googler/wiki/What-to-do-when-you-encounter-%22No-results%22 etsimään ohjeita
 - En onnistu ratkaisemaan ongelmaa joten etsin toisen, sopivamman ohjelmiston klo 16.20 (pidän tauon)
 
+## 5. FHS
+- ![imp_dir](https://user-images.githubusercontent.com/70698264/213944578-467c73d7-b49c-493a-8c1b-f48ffa88d7bb.png)
+- a
+
+## 6. The Friendly M
+- 
+
 ## Lähteet
 - Karvinen T. Komentaja Pingviini. Luettavissa: https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/#h2-komentaja-pingviini
 - GitHub https://github.com/zyedidia/micro#installation
